src/objects/Connection__c.object
<CustomObject>
    <fields>
        <fullName>Assistant__c</fullName>
        <label>Assistant</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asst_Phone__c</fullName>
        <label>Asst. Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>Home City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Home Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Connections</relationshipLabel>
        <relationshipName>Connections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_City__c</fullName>
        <label>Office City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Country__c</fullName>
        <label>Office Country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <label>Office Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_State_Province__c</fullName>
        <label>Office State/Province</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Street__c</fullName>
        <label>Office Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Zip_Postal_Code__c</fullName>
        <label>Office Zip/Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>25</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>Home State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Home Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Home Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Connection</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>First_Name__c</columns>
        <columns>Mobile__c</columns>
        <columns>Phone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I90000000q149EAA_00NO0000000oSy1MAE</fullName>
        <active>true</active>
        <field>Sales_Order__c.Client_Approver__c</field>
        <filterItems>
            <field>Connection__c.Customer__r.Client__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Sales Order_Client Approver</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I90000000q149EAA_00NO0000000oSypMAE</fullName>
        <active>true</active>
        <field>Sales_Order__c.Address_To__c</field>
        <filterItems>
            <field>Connection__c.Customer__r.Client__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Sales Order_Address To</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I90000000qICoEAM_00N90000005JpMOEA0</fullName>
        <active>false</active>
        <field>Ticket__c.Connection__c</field>
        <filterItems>
            <field>Connection__c.Customer__c</field>
            <operation>equals</operation>
            <valueField>$Source.Customer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Request_Connection</name>
        <sourceObject>Ticket__c</sourceObject>
    </namedFilters>
    <pluralLabel>Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>